<resources>
    <string name="app_name">慕课图表实战</string>
    <string name="title_bar_chart">简单直方图</string>
    <string name="title_curve_chart">简单曲线图</string>
    <string name="show_shadow">展示阴影图</string>
    <string name="show_circle">显示圆点</string>
    <string name="title_line_chart">简单折线图</string>
    <string name="title_k_bar">MPAC实现K线图</string>
    <string name="title_pie_chart">MPAC实现饼状图</string>
    <string name="no_data">暂无数据</string>
    <string name="pie_center">利用MPAC来实现饼状图</string>
    <string name="title_randar_chart">MPAC实现雷达图</string>
    <string name="title_simple_graph">基础图形的绘制</string>
    <string name="title_simple_column">简单直方图的绘制</string>
    <string name="title_simple_curve">简单曲线图的绘制</string>
    <string name="titile_moji">仿墨迹天气APP</string>
    <string name="title_tonghuashun">仿同花顺K线图</string>
    <string name="title_alipay">仿支付宝芝麻信用分</string>

    <string-array name="chart_types">
        <item>MPAC实现直方图</item>
        <item>MPAC实现曲线图</item>
        <item>MPAC实现折线图</item>
        <item>MPAC实现K线图</item>
        <item>MPAC实现饼状图</item>
        <item>MPAC实现雷达图</item>
        <item>Android基本图形的绘制</item>
        <item>简单直方图的绘制</item>
        <item>简单曲线图的绘制</item>
        <item>仿墨迹天气温度曲线</item>
        <item>仿同花顺K线图</item>
        <item>仿支付宝芝麻信用分</item>
    </string-array>


    <string name="k_open">开</string>
    <string name="k_close">收</string>
    <string name="k_max">高</string>
    <string name="k_min">低</string>
    <string name="k_num">量</string>
    <string name="k_amount">额</string>
    <string name="k_exchange">换</string>
    <string name="k_ma">MA</string>
    <string name="k_ma5">5:</string>
    <string name="k_ma10">10:</string>
    <string name="k_ma20">20:</string>
    <string name="k_ma30">30:</string>

    <string name="average_price">均价:%1$s</string>
    <string name="new_price">最新:</string>

    <string name="wan_unit">万手</string>
    <string name="yi_unit">亿手</string>

    <string name="entity_macd">MACD</string>
    <string name="entity_kdj">KDJ</string>
    <string name="entity_wr">WR</string>
    <string name="entity_rsi">RSI</string>
    <string name="entity_boll">BOLL</string>
    <string name="entity_expma">EXPMA</string>
    <string name="entity_dmi">DMI</string>
</resources>
