<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_gray_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/common_gray_bg"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kline_tv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="0.00"
                    android:textColor="@color/text_color_red"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_max" />

                <TextView
                    android:id="@+id/kline_tv_max"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_open" />

                <TextView
                    android:id="@+id/kline_tv_open"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_num" />

                <TextView
                    android:id="@+id/kline_tv_num"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp">

                    <TextView
                        android:id="@+id/kline_tv_sub"
                        style="@style/MainCommonText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0.00"
                        android:textColor="@color/text_color_red"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/kline_tv_percent"
                        style="@style/MainCommonText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0.00"
                        android:textColor="@color/text_color_red"
                        android:textSize="16sp" />
                </LinearLayout>


                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_min" />

                <TextView
                    android:id="@+id/kline_tv_min"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_exchange" />

                <TextView
                    android:id="@+id/kline_tv_exchange"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_amount" />

                <TextView
                    android:id="@+id/kline_tv_amount"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/view_kline_chart_top_ma" />

        <chart.muke.com.mukechart.actualchart.tonghuashun.demo.MyCombinedChart
            android:id="@+id/kline_chart_k"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />

    </LinearLayout>

</LinearLayout>